objects/A_b__c.object
<CustomObject>
    <description>A&amp;b</description>
    <fields>
        <fullName>A_Bfeild__c</fullName>
        <description>A&amp;Bfeild</description>
        <label>A&amp;Bfeild</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLnew1__c</fullName>
        <description>test</description>
        <label>PLnew1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Test1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PLnew2__c</fullName>
        <description>gdg</description>
        <label>PLnew2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Test1</valueSetName>
        </valueSet>
    </fields>
    <label>A&amp;b</label>
    <nameField>
        <label>A&amp;b Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A&amp;bs</pluralLabel>
    <recordTypes>
        <fullName>RC1</fullName>
        <active>true</active>
        <description>test</description>
        <label>RC1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>